--- a/styles/page5.css
+++ b/styles/page5.css
@@ -1,69 +1,213 @@
-@import url('https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playpen+Sans:wght@100..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap');
 
-body {
-    margin: 0;
-    height: 100vh;
-    width: 100vw;
-    overflow: hidden;
-    color: #272144;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    background-color: #87C8F4;
-    background-image: url("../images/paperbackground3.png");
-    background-size: cover;
-    background-position: center center;
-    object-fit: contain;
+html {
+    margin: 0; 
+    height: 100%; 
+    width: 100%;
+    scroll-behavior: smooth;
 }
 
-.app {
+body {
+    opacity: 0;
+    overflow-x: hidden;
+    margin: 0;
+    height: 100%;
+    width: 200%;
+    color: #5E3B29;
+    font-family: "Roboto Serif", sans-serif;
+    font-weight: 500;
+    background-color: #FAE8D7;
+    background-image: url("../images/paperbackground.png");
+    background-size: cover;
+    background-size: auto 100%;
+    background-position: center center;
+    object-fit: contain;
+    user-select: none;
+    transition: opacity 1.5s;
+}
+
+a {
+    color: #5E3B29;
+    text-decoration: none;
+}
+
+.pages {
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    position: fixed;
+    top: 2vw;
+    left: 50%;
+    -ms-transform: translateX(-50);
+    transform: translateX(-50%);
+}
+
+.pages > input {
+    background: none;
+    border: 0.15vw solid #5e3b2982;
+    border-left: none;
+    padding: 0.4vw 0.6vw;
+    font-family: 'Roboto Serif', serif;
+    color: #5E3B2982;
+    cursor: pointer;
+}
+
+#left {
+    border: 0.15vw solid #5E3B29;
+    color: #5E3B29;
+    background: white;
+    border-top-left-radius: 0.4vw;
+    border-bottom-left-radius: 0.4vw;
+}
+
+#right {
+    border-top-right-radius: 0.4vw;
+    border-bottom-right-radius: 0.4vw;
+}
+
+#results {
     display: flex;
     flex-direction: column;
     text-align: center;
-    margin-top: 1.1vw;
-    max-height: max-content;
-    min-height: max-content;
-}
-
-.counter {
-    font-size: 4.5vw;
-    font-family: "Grandstander";
-    font-weight: 600;
-    text-align: left; 
-    margin-left: 0.9vw;
-    margin-right: 0.9vw;
-    padding-left: 0.2vw;
-    border-bottom: 0.2vw dotted #272144;
-}
-
-.choices {
-    display: flex;
-    justify-content: space-between;
-    padding: 0 18.9vw;
-    padding-bottom: 0.5vw;
-    border-top: 0.2vw dotted #272144;
-}
-
-.billones {
-    height: calc(4vw*6.5);
-    width: calc(3vw*6.5);
-    margin: auto;
-}
-
-#itemname {
+    margin-top: 2vw;
     position: absolute;
-    left: 50%;
-    transform: translate(-50%, 0);
-    top: 1.7vw;
-    font-family: "Grandstander";
-    font-size: 2.5vw;
-    font-weight: 600;
+    top: 5.8vw;
+    left: 0;
+    width: 100%;
 }
 
-.bin {
-    max-height: 12vw;
-    margin-left: 4vw;
+#suggestions {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 2vw;
+    position: absolute;
+    top: 5vw;
+    left: 100%;
+    width: 100%;
 }
 
-.black-bin {
-    margin-left: 0;
+#message {
+    font-weight: 400;
+    margin: 0 16vw;
+    margin-top: 0;
+    font-size: 1.8vw;
+    color: black;
+}
+
+#score {
+    margin-top: 1.3vw;
+    font-size: 4vw;
+    font-weight: 400;
+}
+
+#advice {
+    font-weight: 400;
+    margin: 0 15vw;
+    margin-top: 2vw;
+    font-size: 1.8vw;
+    color: black;
+}
+
+#reaction {
+    position: absolute;
+    height: calc(3vh*13.5);
+    width: calc(4vh*13.5);
+    margin: auto;
+    top: 37vh;
+    left: 49vw;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+#link1 {
+    font-weight: 400;
+    margin: 0 20vw;
+    font-size: 1.8vw;
+}
+
+#link2 {
+    font-weight: 400;
+    margin: 0 20vw;
+    font-size: 1.8vw;
+}
+
+#link1 {
+    width: 40vw;
+    margin: auto;
+    font-size: 1.8vw;
+    padding: 1vw;
+    font-family: "Roboto Serif", sans-serif;
+    background: none;
+    border-radius: 0.6vw;
+    border: 0.17vw solid #5E3B29;
+    color: #5E3B29;
+    cursor: pointer;
+    margin-top: 5vw;
+    box-shadow: 0 0 0.7vw rgb(141, 141, 141);
+}
+
+#link2 {
+    width: 40vw;
+    margin: auto;
+    font-size: 1,8vw;
+    padding: 1vw;
+    font-family: "Roboto Serif", sans-serif;
+    background: none;
+    border-radius: 0.6vw;
+    border: 0.17vw solid #5E3B29;
+    color: #5E3B29;
+    cursor: pointer;
+    margin-top: 2vw;
+    box-shadow: 0 0 0.7vw rgb(141, 141, 141);
+}
+
+#continue {
+    position: absolute;
+    width: 20vw;
+    margin: auto;
+    font-size: 2vw;
+    padding: 1vw;
+    font-family: "Roboto Serif", sans-serif;
+    background: white;
+    border-radius: 0.6vw;
+    border: 0.17vw solid #000000;
+    cursor: pointer;
+    box-shadow: 0 0 0.7vw rgb(141, 141, 141);
+    top: 67vh;
+    left: 50vw;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+#return {
+    width: 30vw;
+    margin: auto;
+    font-size: 2vw;
+    padding: 1vw;
+    font-family: "Roboto Serif", sans-serif;
+    background: white;
+    border-radius: 0.6vw;
+    border: 0.17vw solid #000000;
+    cursor: pointer;
+    margin-top: 6vw;
+    box-shadow: 0 0 0.7vw rgb(141, 141, 141);
+}
+
+#back {
+    width: 5vw;
+    margin: auto;
+    font-size: 2vw;
+    padding: 1vw;
+    font-family: "Roboto Serif", sans-serif;
+    background: white;
+    border-radius: 0.6vw;
+    border: 0.17vw solid #000000;
+    cursor: pointer;
+    margin-top: 6vw;
+    box-shadow: 0 0 0.7vw rgb(141, 141, 141);
+}
+
+a {
+    text-decoration: none;
 }
